--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/coffmanjrp/typescript-for-javascript-developers#readme",
   "devDependencies": {
+    "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   }
 }
