install ts-node-dev

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/coffmanjrp/typescript-for-javascript-developers#readme",
   "devDependencies": {
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
   }
 }
