--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.0"
   }
 }
